[tool.poetry]
name = "nsukit"
version = "0.1.0"
description = ""
authors = ["jilianyi <jilianyi@naishu.tech>", "liuwen <liuwen@naishu.tech>"]
license = "Mulan PSL2"
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = ">=1.24"
pyserial = "^3.5"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
viztracer = "^0.15.6"
ipython = ">=8"
commitizen = "^3.6.0"
setuptools-cpp = "^0.1.0"

[build-system]
requires = ["poetry-core", "wheel", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"
